--- a/cadastro.html
+++ b/cadastro.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title> Cadastro de Usuário </title>
+<title> User Sign Up </title>
 </head>
 <body>
 <form method="POST" action="cadastro.php">
-<label>Login:</label><input type="text" name="login" id="login"><br>
-<label>Senha:</label><input type="password" name="senha" id="senha"><br>
-<input type="submit" value="Cadastrar" id="cadastrar" name="cadastrar">
+<label>Email:</label><input type="text" name="email" id="email"><br>
+<label>Password:</label><input type="password" name="password" id="password"><br>
+<input type="submit" value="Register" id="register" name="register">
 </form>
 </body>
 </html>
