--- a/login.html
+++ b/login.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title> Login de Usuário </title>
+<title> User Sign In </title>
 </head>
 <body>
 <form method="POST" action="login.php">
-<label>Login:</label><input type="text" name="login" id="login"><br>
-<label>Senha:</label><input type="password" name="senha" id="senha"><br>
-<input type="submit" value="entrar" id="entrar" name="entrar"><br>
-<a href="cadastro.html">Cadastre-se</a>
+<label>Email:</label><input type="text" name="email" id="login"><br>
+<label>Password:</label><input type="password" name="password" id="password"><br>
+<input type="submit" value="Enter" id="enter" name="enter"><br>
+<a href="cadastro.html">Register</a>
 </form>
 </body>
 </html>
